<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyEvent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Event Home</string>
    <string name="topiclist">Topics</string>
    <string name="eventlist">Events</string>
    <string name="showEvents">See Event</string>
     <string name="addEvents">Add Event</string>
    <string name="subscribeTopic">Subscribe Topic</string>
    <string name="title_activity_event_detail">Event Details</string>
    <string name="title_add_event">Add Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_my_upcoming_events">My Upcoming Events</string>
    <string name="title_activity_register">Signup</string>

</resources>
