<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asep.easyevent.MainActivity" 
    android:orientation="vertical" 
    android:id="@+id/mainLayout">
	
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/topiclist"
        />
    
	<Spinner
        android:id="@+id/topics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

	<TextView 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#666"
	    android:text="@string/eventlist"
	    android:textStyle="bold"
	    android:textSize="20sp"/>
    
	<Spinner
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	
	<Button 
	    android:id="@+id/showbtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/showEvents"
	    android:onClick="showDetail"
	    android:layout_marginTop="25dp"
	    android:layout_marginRight="10sp"
	    android:textColor="#555"
	    android:textStyle="bold"
	    android:textSize="20sp"/>
	
	<Button 
	    android:id="@+id/subscribeBtn"
	    android:layout_width="wrap_content"
	    android:layout_marginTop="25dp"
	    android:layout_height="wrap_content"
	    android:onClick="subscribeTopicAction"
	    android:text="@string/subscribeTopic"
	    android:textColor="#555"
	    android:textStyle="bold"
	    android:textSize="20sp"/>
	
	</LinearLayout>
	
	<Button 
	    android:id="@+id/addEventBtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="showAddEvent"
	    android:text="@string/addEvents"
	    android:layout_marginTop="25dp"
	    android:textColor="#555"
	    android:textStyle="bold"
	    android:textSize="20sp"/>
	
	
	<TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/title_my_upcoming_events" 
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="#666"
            android:textSize="25sp"/>
	
	<ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:orientation="vertical" >
	</LinearLayout>
	</ScrollView>
	
	
	
	
</LinearLayout>